<resources>
    <string name="app_name">Phoenix Store</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textTitleComments">Mi Comentario</string>
    <string name="hintComment">Comentario</string>
    <string name="saveComment">guardar comentario</string>
    <string name="btBuyProduct">agregar al carrito</string>
    <string name="textTitleAdmin">Mi perfil</string>
    <string name="navigate_edit">editar datos</string>
    <string name="hintName">Nombre</string>
    <string name="hintAddress">Dirección</string>
    <string name="hintPhone">Teléfono</string>
    <string name="hintMail">Correo</string>
    <string name="btSaveAdmin">guardar cambios</string>
</resources>