<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".viewmodel.fragments.CommentsDetailDialogFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Spinner
            android:id="@+id/spinnerScores"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/orange"/>

        <TextView
            android:id="@+id/tvComments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textTitleComments"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            android:textSize="@dimen/sizeTitleComments"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/etComments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:hint="@string/hintComment"
            android:inputType="textMultiLine"
            android:gravity="center_horizontal"/>

        <Button
            android:id="@+id/btSaveComment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/darkOrange"
            android:text="@string/saveComment"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"/>

    </LinearLayout>

</FrameLayout>