<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".viewmodel.fragments.AdminDetailDialogFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Toolbar
            android:id="@+id/toolbarAdmin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.appbar.AppBarLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="@dimen/cardCornerRadius"
                    app:cardElevation="@dimen/cardElevation"
                    android:layout_margin="@dimen/defaultLayoutMargin">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">


                        <ImageButton
                            android:id="@+id/ibPhotoAdmin"
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:src="@drawable/perfil"
                            android:layout_gravity="center_horizontal"/>

                        <EditText
                            android:id="@+id/etNameAdmin"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_marginTop="@dimen/defaultLayoutMargin"
                            android:hint="@string/hintName"
                            android:paddingStart="12dp"
                            android:paddingEnd="12dp"
                            android:drawableStart="@drawable/ic_account"
                            android:background="@drawable/custon_input"
                            android:drawablePadding="12dp"
                            android:inputType="textMultiLine"/>

                        <EditText
                            android:id="@+id/etAddressAdmin"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_marginTop="@dimen/defaultLayoutMargin"
                            android:hint="@string/hintAddress"
                            android:paddingStart="12dp"
                            android:paddingEnd="12dp"
                            android:drawableStart="@drawable/ic_location"
                            android:background="@drawable/custon_input"
                            android:drawablePadding="12dp"
                            android:inputType="textMultiLine"/>

                        <EditText
                            android:id="@+id/etPhoneAdmin"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_marginTop="@dimen/defaultLayoutMargin"
                            android:hint="@string/hintPhone"
                            android:paddingStart="12dp"
                            android:paddingEnd="12dp"
                            android:drawableStart="@drawable/ic_call"
                            android:background="@drawable/custon_input"
                            android:drawablePadding="12dp"
                            android:inputType="textMultiLine"/>

                        <EditText
                            android:id="@+id/etMailAdmin"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_marginTop="@dimen/defaultLayoutMargin"
                            android:hint="@string/hintMail"
                            android:paddingStart="12dp"
                            android:paddingEnd="12dp"
                            android:drawableStart="@drawable/ic_baseline_email_24"
                            android:background="@drawable/custon_input"
                            android:drawablePadding="12dp"
                            android:inputType="textMultiLine"/>

                        <Button
                            android:id="@+id/btSaveAdmin"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:background="@color/orange"
                            android:text="@string/btSaveAdmin"
                            android:textColor="@color/black"
                            android:layout_marginTop="@dimen/defaultLayoutMargin"/>

                    </LinearLayout>



                </androidx.cardview.widget.CardView>



            </LinearLayout>
        </ScrollView>

    </FrameLayout>

</FrameLayout>